Moving more items over

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -860,25 +860,31 @@ main#content .container {
   margin-left: 20px;
 }
 /* line 500, sass/main.sass */
+#news .container .page-detail .news-image .news-content img {
+  float: right;
+  margin-left: 20px;
+  margin-bottom: 20px;
+}
+/* line 505, sass/main.sass */
 #news .container .page-content .news-image {
   margin-bottom: 20px;
 }
-/* line 502, sass/main.sass */
+/* line 507, sass/main.sass */
 #news .container .page-content .page-text {
   border-bottom: 1px solid #E2E2E2;
   padding-bottom: 30px;
   margin-bottom: 30px;
 }
-/* line 503, sass/main.sass */
+/* line 508, sass/main.sass */
 #news .container .page-content .page-text:only-of-type, #news .container .page-content .page-text:last-child {
   border-bottom: none;
 }
-/* line 508, sass/main.sass */
+/* line 513, sass/main.sass */
 #news .container .pagination {
   clear: left;
   width: 596px;
 }
-/* line 511, sass/main.sass */
+/* line 516, sass/main.sass */
 #news .container .pagination a {
   display: block;
   padding: 6px 12px;
@@ -897,15 +903,15 @@ main#content .container {
   font-style: italic;
   text-decoration: none;
 }
-/* line 528, sass/main.sass */
+/* line 533, sass/main.sass */
 #news .container .pagination a:first-child {
   float: right;
 }
-/* line 530, sass/main.sass */
+/* line 535, sass/main.sass */
 #news .container .pagination a:last-child {
   float: left;
 }
-/* line 532, sass/main.sass */
+/* line 537, sass/main.sass */
 #news .container .pagination:after {
   content: "";
   clear: both;
@@ -913,11 +919,11 @@ main#content .container {
   height: 1px;
   display: block;
 }
-/* line 539, sass/main.sass */
+/* line 544, sass/main.sass */
 #news .container .news-search-form form {
   position: relative;
 }
-/* line 541, sass/main.sass */
+/* line 546, sass/main.sass */
 #news .container .news-search-form form input[type=search] {
   width: 100%;
   border: none;
@@ -930,7 +936,7 @@ main#content .container {
   font-size: 24px;
   text-indent: 8px;
 }
-/* line 552, sass/main.sass */
+/* line 557, sass/main.sass */
 #news .container .news-search-form form input[type=submit] {
   position: absolute;
   right: 0;
@@ -941,65 +947,65 @@ main#content .container {
   background: #F48F1B url('/images/site/search.png?1428522432') no-repeat center center;
   text-indent: -10000px;
 }
-/* line 562, sass/main.sass */
+/* line 567, sass/main.sass */
 #news .container .news-search {
   width: 596px;
   min-height: 300px;
 }
-/* line 566, sass/main.sass */
+/* line 571, sass/main.sass */
 #news .container .news-search .result-listing {
   margin: 0;
   padding: 0;
 }
-/* line 569, sass/main.sass */
+/* line 574, sass/main.sass */
 #news .container .news-search .result-listing li {
   border-bottom: 1px solid #E2E2E2;
   list-style: none;
   padding: 14px 0;
   margin: 0;
 }
-/* line 574, sass/main.sass */
+/* line 579, sass/main.sass */
 #news .container .news-search .result-listing li:last-child {
   border-bottom: none;
 }
-/* line 576, sass/main.sass */
+/* line 581, sass/main.sass */
 #news .container .news-search .result-listing li img {
   float: left;
   margin-right: 25px;
 }
-/* line 579, sass/main.sass */
+/* line 584, sass/main.sass */
 #news .container .news-search .result-listing a {
   color: #333333;
   text-decoration: none;
 }
-/* line 582, sass/main.sass */
+/* line 587, sass/main.sass */
 #news .container .news-search .result-listing a span {
   color: #B24629;
   display: block;
 }
-/* line 585, sass/main.sass */
+/* line 590, sass/main.sass */
 #news .container .news-search .result-listing a span:last-child {
   color: #333333;
 }
-/* line 587, sass/main.sass */
+/* line 592, sass/main.sass */
 #news .container .news-search .no-results {
   font-size: 18px;
 }
-/* line 589, sass/main.sass */
+/* line 594, sass/main.sass */
 #news .container #news-sidebar {
   float: right;
   padding-left: 75px;
   width: 334px;
 }
-/* line 593, sass/main.sass */
+/* line 598, sass/main.sass */
 #news .container #news-sidebar a {
   color: #B24629;
 }
-/* line 595, sass/main.sass */
+/* line 600, sass/main.sass */
 #news .container #news-sidebar .news-sidebar-section {
   margin-bottom: 40px;
 }
-/* line 597, sass/main.sass */
+/* line 602, sass/main.sass */
 #news .container #news-sidebar h1 {
   font-family: "AlternateGothicCom-No2", Tahoma, Geneva, sans-serif;
   color: #999999;
@@ -1008,17 +1014,17 @@ main#content .container {
   line-height: 52px;
   text-align: center;
 }
-/* line 604, sass/main.sass */
+/* line 609, sass/main.sass */
 #news .container #news-sidebar ul {
   padding: 0px;
 }
-/* line 606, sass/main.sass */
+/* line 611, sass/main.sass */
 #news .container #news-sidebar ul h4 {
   font-size: 14px;
   margin-bottom: 5px;
   margin-top: -4px;
 }
-/* line 610, sass/main.sass */
+/* line 615, sass/main.sass */
 #news .container #news-sidebar ul li {
   border-bottom: 1px solid #E2E2E2;
   list-style: none;
@@ -1026,7 +1032,7 @@ main#content .container {
   margin-bottom: 0;
   float: left;
 }
-/* line 616, sass/main.sass */
+/* line 621, sass/main.sass */
 #news .container #news-sidebar ul li a {
   font-family: "Nickyshand", Tahoma, Geneva, sans-serif;
   text-decoration: none;
@@ -1034,21 +1040,21 @@ main#content .container {
   float: left;
   font-size: 20px;
 }
-/* line 622, sass/main.sass */
+/* line 627, sass/main.sass */
 #news .container #news-sidebar ul li a:hover {
   color: #ED8F17;
 }
-/* line 624, sass/main.sass */
+/* line 629, sass/main.sass */
 #news .container #news-sidebar ul li img {
   float: left;
   margin-right: 10px;
 }
-/* line 627, sass/main.sass */
+/* line 632, sass/main.sass */
 #news .container #news-sidebar #mc_embed_signup {
   padding: 25px 30px;
   background-color: #F3F3F3;
 }
-/* line 630, sass/main.sass */
+/* line 635, sass/main.sass */
 #news .container #news-sidebar #mc_embed_signup h2 {
   text-align: center;
   font-size: 20px;
@@ -1056,16 +1062,16 @@ main#content .container {
   padding: 0;
   margin-bottom: 25px;
 }
-/* line 636, sass/main.sass */
+/* line 641, sass/main.sass */
 #news .container #news-sidebar #mc_embed_signup .mc-field-group {
   margin-bottom: 15px;
 }
-/* line 638, sass/main.sass */
+/* line 643, sass/main.sass */
 #news .container #news-sidebar #mc_embed_signup .mc-field-group label {
   display: block;
   margin-bottom: 5px;
 }
-/* line 641, sass/main.sass */
+/* line 646, sass/main.sass */
 #news .container #news-sidebar #mc_embed_signup .mc-field-group input {
   width: 100%;
   padding: 5px;
@@ -1074,14 +1080,14 @@ main#content .container {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
-/* line 646, sass/main.sass */
+/* line 651, sass/main.sass */
 #news .container #news-sidebar #mc_embed_signup .mc-field-group .mce_inline_error {
   width: 100%;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
-/* line 649, sass/main.sass */
+/* line 654, sass/main.sass */
 #news .container #news-sidebar #mc_embed_signup input[type="submit"] {
   -webkit-appearance: button;
   display: block;
@@ -1101,33 +1107,33 @@ main#content .container {
   text-align: center;
 }
 
-/* line 670, sass/main.sass */
+/* line 675, sass/main.sass */
 #contact .prefer_email {
   clear: both;
   padding-top: 30px;
 }
-/* line 673, sass/main.sass */
+/* line 678, sass/main.sass */
 #contact .prefer_email a {
   color: #B24629;
   text-decoration: none;
 }
-/* line 676, sass/main.sass */
+/* line 681, sass/main.sass */
 #contact .prefer_email a:hover {
   text-decoration: underline;
 }
-/* line 678, sass/main.sass */
+/* line 683, sass/main.sass */
 #contact .success {
   display: none;
 }
-/* line 680, sass/main.sass */
+/* line 685, sass/main.sass */
 #contact .success p {
   margin-top: 20px;
 }
-/* line 682, sass/main.sass */
+/* line 687, sass/main.sass */
 #contact .success strong {
   font-weight: bold;
 }
-/* line 684, sass/main.sass */
+/* line 689, sass/main.sass */
 #contact .errors {
   display: none;
   font-style: italic;
@@ -1136,44 +1142,44 @@ main#content .container {
   border-bottom: 1px solid #B24629;
   margin: 20px 0;
 }
-/* line 691, sass/main.sass */
+/* line 696, sass/main.sass */
 #contact .errors ul li {
   font-size: 14px;
   margin-bottom: 5px;
 }
-/* line 694, sass/main.sass */
+/* line 699, sass/main.sass */
 #contact .errors ul li:last-child {
   margin-bottom: 0;
 }
-/* line 696, sass/main.sass */
+/* line 701, sass/main.sass */
 #contact form {
   margin-top: 20px;
 }
-/* line 698, sass/main.sass */
+/* line 703, sass/main.sass */
 #contact form .form-left {
   float: left;
   width: 240px;
 }
-/* line 701, sass/main.sass */
+/* line 706, sass/main.sass */
 #contact form .form-right {
   float: left;
 }
-/* line 703, sass/main.sass */
+/* line 708, sass/main.sass */
 #contact form #location {
   display: none;
 }
-/* line 705, sass/main.sass */
+/* line 710, sass/main.sass */
 #contact label, #contact input, #contact button, #contact select, #contact textarea {
   font-size: 14px;
   font-weight: normal;
   line-height: 20px;
 }
-/* line 709, sass/main.sass */
+/* line 714, sass/main.sass */
 #contact .required {
   color: red;
   padding-left: 5px;
 }
-/* line 713, sass/main.sass */
+/* line 718, sass/main.sass */
 #contact input[type="submit"] {
   -webkit-appearance: button;
   display: block;
@@ -1191,12 +1197,12 @@ main#content .container {
   margin-top: 10px;
   width: 220px;
 }
-/* line 730, sass/main.sass */
+/* line 735, sass/main.sass */
 #contact label {
   display: block;
   margin-bottom: 5px;
 }
-/* line 734, sass/main.sass */
+/* line 739, sass/main.sass */
 #contact select, #contact textarea {
   display: inline-block;
   height: 20px;
@@ -1207,7 +1213,7 @@ main#content .container {
   color: #555555;
   vertical-align: middle;
 }
-/* line 746, sass/main.sass */
+/* line 751, sass/main.sass */
 #contact input[type="text"], #contact input[type="password"], #contact input[type="datetime"], #contact input[type="datetime-local"], #contact input[type="date"], #contact input[type="month"], #contact input[type="time"], #contact input[type="week"], #contact input[type="number"], #contact input[type="email"], #contact input[type="url"], #contact input[type="search"], #contact input[type="tel"], #contact input[type="color"] {
   display: inline-block;
   height: 20px;
@@ -1218,11 +1224,11 @@ main#content .container {
   color: #555555;
   vertical-align: middle;
 }
-/* line 756, sass/main.sass */
+/* line 761, sass/main.sass */
 #contact input {
   width: 206px;
 }
-/* line 759, sass/main.sass */
+/* line 764, sass/main.sass */
 #contact textarea {
   width: 340px;
   height: 140px;
@@ -1236,7 +1242,7 @@ main#content .container {
   -o-transition: border linear 0.2s, box-shadow linear 0.2s;
   transition: border linear 0.2s, box-shadow linear 0.2s;
 }
-/* line 773, sass/main.sass */
+/* line 778, sass/main.sass */
 #contact input[type="text"], #contact input[type="password"], #contact input[type="datetime"], #contact input[type="datetime-local"], #contact input[type="date"], #contact input[type="month"], #contact input[type="time"], #contact input[type="week"], #contact input[type="number"], #contact input[type="email"], #contact input[type="url"], #contact input[type="search"], #contact input[type="tel"], #contact input[type="color"] {
   background-color: #ffffff;
   border: 1px solid #cccccc;
@@ -1248,7 +1254,7 @@ main#content .container {
   -o-transition: border linear 0.2s, box-shadow linear 0.2s;
   transition: border linear 0.2s, box-shadow linear 0.2s;
 }
-/* line 784, sass/main.sass */
+/* line 789, sass/main.sass */
 #contact textarea:focus {
   border-color: rgba(82, 168, 236, 0.8);
   outline: 0;
@@ -1256,7 +1262,7 @@ main#content .container {
   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
 }
-/* line 792, sass/main.sass */
+/* line 797, sass/main.sass */
 #contact input[type="text"]:focus, #contact input[type="password"]:focus, #contact input[type="datetime"]:focus, #contact input[type="datetime-local"]:focus, #contact input[type="date"]:focus, #contact input[type="month"]:focus, #contact input[type="time"]:focus, #contact input[type="week"]:focus, #contact input[type="number"]:focus, #contact input[type="email"]:focus, #contact input[type="url"]:focus, #contact input[type="search"]:focus, #contact input[type="tel"]:focus, #contact input[type="color"]:focus {
   border-color: rgba(82, 168, 236, 0.8);
   outline: 0;
@@ -1264,7 +1270,7 @@ main#content .container {
   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
 }
-/* line 799, sass/main.sass */
+/* line 804, sass/main.sass */
 #contact .uneditable-input:focus {
   border-color: rgba(82, 168, 236, 0.8);
   outline: 0;
@@ -1272,7 +1278,7 @@ main#content .container {
   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
 }
-/* line 807, sass/main.sass */
+/* line 812, sass/main.sass */
 #contact input[type="radio"], #contact input[type="checkbox"] {
   margin: 4px 0 0;
   margin-top: 1px \9;
