--- a/craft/templates/wine.html
+++ b/craft/templates/wine.html
@@ -54,6 +54,10 @@
           | replace('/(?<=>)(.*?):/', "<strong>$1:</strong>")
           | raw }}
 
+        <div class="add-to-cart">
+          {% include 'partials/add_product.html' %}
+        </div>
+
       </div>
     </div>
   </article>
