--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -41,11 +41,18 @@
 						<li><a href="{{ url('news') }}" {% if craft.request.getSegment(1) == 'news' %}class="active"{% endif %}>{{"News" | translate}}</a></li>
 						<li><a href="{{ url('contact') }}" {% if craft.request.getSegment(1) == 'contact' %}class="active"{% endif %}>{{"Contact" | translate}}</a></li>
 					</ul>
-					<ul class="localization">
-						<li {% if craft.locale == 'en_us' %}class="active"{% endif %}><a href="{{ url('/en') }}" >EN</a></li>
-						<li {% if craft.locale == 'it' %}class="active"{% endif %}><a href="{{ url('/it') }}" >ITA</a></li>
-					</ul>
-
+					<div class="top-menu">
+						<ul class="localization">
+							<li {% if craft.locale == 'en_us' %}class="active"{% endif %}><a href="{{ url('/en') }}" >EN</a></li>
+							<li {% if craft.locale == 'it' %}class="active"{% endif %}><a href="{{ url('/it') }}" >ITA</a></li>
+						</ul>
+						<div class="cart">
+							{% set cart = craft.commerce.cart %}
+							<a class="button {% if craft.request.getSegment(1) == 'cart' %}button-primary{% endif %}" href="{{ url('commerce/cart') }}">
+							  <i class="fa fa-shopping-cart"></i> {{ "Cart"|t }} <span>{{ cart.totalQty }}</span>
+							</a>
+						</div>
+					</div>
 				</div>
 			</nav>
 
