--- a/public/css/sass/mixins.scss
+++ b/public/css/sass/mixins.scss
@@ -3,7 +3,7 @@
   @media print,
          (-webkit-min-device-pixel-ratio: 1.25),
          (-o-min-device-pixel-ratio: 5/4),
-         (min-resolution: 120dpi) { 
+         (min-resolution: 120dpi) {
     background-image: url($hr-image);
     background-size: image-width($lr-image) image-height($lr-image);
   }
@@ -14,11 +14,11 @@
     &:-moz-placeholder { @content; }
     &::-moz-placeholder { @content; }
     &:-ms-input-placeholder { @content; }
-    &::-webkit-input-placeholder { @content; } 
+    &::-webkit-input-placeholder { @content; }
 }
 
 @mixin triangle($direction, $color, $size) {
- 
+
   @if $direction == "left" {
     border-bottom: $size solid transparent;
     border-right: $size solid $color;
@@ -39,7 +39,7 @@
     border-left: $size solid transparent;
     border-top: $size solid $color;
   }
- 
+
   height: 0;
   width: 0;
 }
@@ -76,17 +76,15 @@ $black: #000;
       margin-right: -0.25em;
     }
     .featherlight-content {
-      position: relative;
       text-align: left;
       vertical-align: middle;
       display: inline-block;
       overflow: auto;
-      padding: 25px 25px 0;
-      border-bottom: 25px solid transparent;
       min-width: 30%;
       margin-left: 5%;
       margin-right: 5%;
-      max-height: 95%;
+      max-height: 85%;
+      max-width: 85%;
       background: $white;
       cursor: auto;
       white-space: normal;
@@ -97,16 +95,14 @@ $black: #000;
     .featherlight-close-icon {
       position: absolute;
       z-index: 9999;
-      top: 0;
-      right: 0;
-      line-height: 25px;
-      width: 25px;
+      top: 50px;
+      right: 50px;
+      line-height: 22px;
+      width: 22px;
       cursor: pointer;
       text-align: center;
-      font: Arial, sans-serif;
-      background: $white;
-      background: $white_30;
-      color: $black;
+      text-indent: -10000px;
+      background: image-url('site/close.svg') no-repeat 0 0
     }
     .featherlight-image {
       width: 100%;
@@ -118,14 +114,5 @@ $black: #000;
   .featherlight-iframe .featherlight-content {
     border-bottom: 0;
     padding: 0;
-  }
-}
-@media only screen and(max-width: 1024px) {
-  .featherlight .featherlight-content {
-    margin-left: 10px;
-    margin-right: 10px;
-    max-height: 98%;
-    padding: 10px 10px 0;
-    border-bottom: 10px solid transparent;
   }
 }
