--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -229,11 +229,24 @@ footer
 
 .page-galleries
   margin-top: 25px
-  h4
+  [data-gallery]
     cursor: pointer
-    color: $copper
-    font-size: 20px
-    margin-bottom: 10px
+    .gallery-description
+      display: inline-block
+      vertical-align: middle
+      h4
+        font-size: 28px
+        font-family: $sans
+      p
+        font-size: 14px
+        margin-bottom: 0
+    img
+      display: inline-block
+      vertical-align: middle
+      vertical-align: middle
+      display: inline-block
+      width: 100px
+      margin-right: 15px
 
 .gallery
   width: 100%
