Basic appearance and auto opening for age confirmation dialogue
Display modal if buy button is clicked

Swap local storage for session storage.

Appropriate use of get cart functionality

Attempting to change overflow so as to not show scrollbars.

--- a/craft/templates/commerce/cart.html
+++ b/craft/templates/commerce/cart.html
@@ -4,6 +4,7 @@
     <div class="row">
         <div class="twelve columns">
 
+            {% set cart = craft.commerce.cart %}
             {% if cart.lineItems|length %}
             <table class="u-full-width">
                 <thead>
