--- a/craft/templates/partials/add_product.html
+++ b/craft/templates/partials/add_product.html
@@ -1,3 +1,5 @@
+{% set cart = craft.commerce.cart %}
+
 <form method="POST">
   <input type="hidden" name="action" value="commerce/cart/updateCart">
   <input type="hidden" name="redirect" value="commerce/cart">
@@ -12,7 +14,7 @@
       <label for="qty">Qty:</label>
       <input type="number" name="qty" value="1" min="1" max="10">
     </div>
-    <input type="submit" value="{{ "Add to cart" | t }}" class="btn btn-outline-danger" />
+    <input class="buy" type="submit" value="{{ "Add to cart" | t }}" />
   {% endif %}
 </form>
 
