Basic appearance and auto opening for age confirmation dialogue

--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -169,6 +169,9 @@
 		</div>
 	</main>
 
+	<!-- Age/Shipping Confirmation -->
+	{% include 'shared/confirmation_modal.html' %}
+
 	<!-- Footer -->
 	<footer id="footer">
 		<ul>
