Display modal if buy button is clicked

--- a/craft/templates/partials/add_product.html
+++ b/craft/templates/partials/add_product.html
@@ -12,7 +12,7 @@
       <label for="qty">Qty:</label>
       <input type="number" name="qty" value="1" min="1" max="10">
     </div>
-    <input type="submit" value="{{ "Add to cart" | t }}" class="btn btn-outline-danger" />
+    <input class="buy" type="submit" value="{{ "Add to cart" | t }}" />
   {% endif %}
 </form>
 
