--- a/craft/templates/partials/confirmation_modal.html
+++ b/craft/templates/partials/confirmation_modal.html
@@ -32,5 +32,6 @@
       <label for="shipping_agreement">{{ 'Are you in EU/US' | t }}</label>
     </li>
   </ul>
-  <!-- <a href="#" class="shipping-confirmation-confirm button">Confirm</a> -->
+  <input type="submit" disabled="disabled" value="{{ "Confirm" | t }}" class="shipping-confirmation-confirm" />
+
 </div>
