--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -31,6 +31,23 @@ body
   color: $text-black
   font-family: $serif
 
+%button
+  @include box-sizing('border-box')
+  cursor: pointer
+  height: 48px
+  border: 0
+  border-radius: 4px
+  background-color: $orange
+  font-weight: normal
+  padding: 0 25px
+  font-family: $sans
+  font-size: 28px
+  color: #fff
+  letter-spacing: 0.05em
+  &[disabled='disabled']
+    background-color: rgba($black, 0.4)
+    cursor: not-allowed
+
 // Header and Footer Work
 
 header
@@ -363,7 +380,7 @@ footer
   max-width: 768px
   max-height: 525px
   display: none
-  padding: 5px
+  padding: 35px
   position: relative
   .close
     width: 22px
@@ -371,8 +388,8 @@ footer
     cursor: pointer
     display: block
     position: absolute
-    right: 5px
-    top: 5px
+    right: 35px
+    top: 35px
     background: image-url('site/close_black.svg') 0 0 no-repeat
   h2
     font-size: 36px
@@ -402,7 +419,7 @@ footer
       top: 13px
       display: block
       @include hr-image('../images/site/accordion.png', '../images/site/accordion@2x.png')
-      background-size: 20px
+      background-size: cover !important
       background-repeat: no-repeat
       background-position: 0 0
     &.active:after
@@ -433,14 +450,21 @@ footer
       -ms-flex-flow: row wrap
       flex-flow: row wrap
       margin-top: 15px
+      max-height: 90px
+      overflow: scroll
     li
       display: inline-block
       padding-bottom: 15px
       color: $copper
       font-size: 14px
       -webkit-box-flex: 0
-      -ms-flex: 0 1 25%
-      flex: 0 1 25%
+      -ms-flex: 0 1 20%
+      flex: 0 1 20%
+  .shipping-confirmation-confirm
+    @extend %button
+    text-decoration: none
+    display: inline-block
+    letter-spacing: 0
 
 // Content Work
 
@@ -554,18 +578,7 @@ footer
         border-radius: 4px
         padding: 2px 4px
       input[type=submit]
-        @include box-sizing('border-box')
-        cursor: pointer
-        height: 48px
-        border: 0
-        border-radius: 4px
-        background-color: $orange
-        font-weight: normal
-        padding: 0 25px
-        font-family: $sans
-        font-size: 28px
-        color: #fff
-        letter-spacing: 0.05em
+        @extend %button
 
 .wine-page-content
   .wine-page-text
